fix title not showing

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -3631,7 +3631,7 @@ a.btn {
         padding: 0;
     }
 
-    .logo-text {
+    .logo-subtitle {
         display: none;
     }
 
